# DynamicMap_Benchmark

./: .gitmodules  memo
methods/kumo_dor/: CMakeLists.txt
methods/kumo_dor/config/: params_kitti.yaml
methods/kumo_dor/src/: Removerter.cpp
methods/mod_removert/: CMakeLists.txt  removert_PCD.cpp
scripts/: CMakeLists.txt
scripts/cpp/: create_rawmap.cpp  export_eval_pcd.cpp  export_prrr_est_pcd.cpp  export_prrr_eval_pcd.cpp  export_prrr_gt_pcd.cpp  extract_gtcloud.cpp
scripts/py/data/: extract_argoverse2.py  extract_semkitti.py
scripts/py/eval/: calc_prrr.py  evaluate_all.py  kumo_eva_all_prrr.py  kumo_eva_prrr.py
scripts/sh/: 0_run_methods_all.sh  1_export_eval_pcd.sh  kumo_export_prrr_pcd.sh  kumo_test_rmvt.sh  run_erasor.sh
scripts/sh/exp/: export_mod_removert_all.sh  run_mod_removert.sh
